Fix for IAMSE-42 tooltips getting cut off (#2353)

--- a/webapp/cas-server-webapp/src/main/resources/static/sass/components/_dashboard-view.scss
+++ b/webapp/cas-server-webapp/src/main/resources/static/sass/components/_dashboard-view.scss
@@ -34,7 +34,6 @@
 
   .app-launcher {
     clear: both;
-    overflow: auto;
     margin-bottom: 2em;
 
     ul {
