--- a/webapp/cas-server-webapp/src/main/resources/static/sass/partials/_base.scss
+++ b/webapp/cas-server-webapp/src/main/resources/static/sass/partials/_base.scss
@@ -121,7 +121,6 @@ input, select {
 }
 
 #content {
-  overflow: hidden;
   background: #fff;
   padding: 20px;
   border-radius: 10px;
